--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 * {
-    --background-color: #191A19;
-    --background-color-2: #0f100f;
+    --background-color: #0f100f;
+    --background-color-2: #191A19;
     --text-color: #e7e7ee;
     --text-color-2: #e7e7ee;
     --accent-color-success: #ddee99;
@@ -27,14 +27,14 @@ button {
     transition: all 0.2s;
 }
 
-button:hover {
+button[disabled = false]:hover {
     filter: brightness(0.8);
     transform: translateY(2px);
 }
 
 button[disabled] {
     opacity: 0.5;
-    cursor: wait;
+    cursor: not-allowed;
 }
 
 h1 {
@@ -42,15 +42,18 @@ h1 {
     font-weight: bold;
 }
 
+h2 {
+    font-size: 1.25em;
+    font-weight: bold;
+}
+
 .wrapper {
     --padding: 2rem;
     width: calc(100% - var(--padding) * 2);
     display: flex;
-    flex-direction: row;
     justify-items: center;
     margin-bottom: 2rem;
     padding: var(--padding);
-    gap: 2rem;
     border-style: solid;
     border-radius: 5px;
     border-width: 1px;
@@ -60,16 +63,12 @@ h1 {
     overflow: auto;
 }
 
-.output-wrapper {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.wrapper.settings {
+    flex-direction: row;
 }
 
-.output-wrapper > div > div > img {
-    width: 100%;
-    border-radius: calc(20px - 1rem);
+.wrapper.output {
+    flex-direction: column;
 }
 
 .parameters {
@@ -86,8 +85,8 @@ h1 {
 }
 
 .parameters > .parameter-group {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(300px, 40%), 1fr));
     width: 100%;
     gap: 3ch;
     margin-bottom: 10px;
@@ -99,11 +98,93 @@ h1 {
 }
 
 .parameter > input {
-    width: 25ch;
+    width: calc(100% - 2em);
     padding: 0.5em 1em;
     border-radius: 4px;
     outline: none;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: 1.1em;
+}
+
+.output-wrapper {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    column-gap: 3ch;
+    margin-bottom: 2rem;
+}
+
+.output-wrapper > div > div > img {
+    width: 30rem;
+    border-radius: calc(20px - 1rem);
+}
+
+.output-wrapper > .table-output {
+    height: auto;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 3fr 4fr;
+    column-gap: 10px;
+    justify-items: start;
+    align-items: start;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 4px;
+    border-color: var(--background-color);
+}
+
+.output-wrapper > .table-output > div {
+    height: 100%;
+    width: calc(100% - 2em);
+    padding: 0 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.output-wrapper > .table-output > div:nth-child(1) {
+    border-top-left-radius: 4px;
+} 
+
+.output-wrapper > .table-output > div:nth-last-child(2) {
+    border-bottom-left-radius: 4px;
+} 
+
+.output-wrapper > .table-output > div:nth-child(2n - 1) {
+    font-weight: bold;
+    background-color: #2e302e;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: var(--background-color);
+  }
+  100% {
+    background-color: var(--background-color-2);
+  }
+}
+
+.skeleton {
+    animation: skeleton-loading 1s linear infinite alternate;
+    filter: brightness(0.8);
+}
+
+.skeleton.container {
+    border-radius: 4px;
+    width: 30rem;
+    height: 25rem;
+}
+
+@media screen and (max-width: 1200px) {
+    .output-wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .output-wrapper > .table-output,
+    .output-wrapper > div > div > img {
+        width: 100%;
+    }
 }
