--- a/main.css
+++ b/main.css
@@ -127,7 +127,12 @@ h2 {
 .heading > .name {
     font-weight: bold;
     font-size: 1.2em;
-    width: 30ch;
+}
+
+.heading > .heading-switch {
+    display: flex;
+    flex-direction: row;
+    gap: 2ch;
 }
 
 .parameter-group {
