--- a/main.css
+++ b/main.css
@@ -4,6 +4,8 @@
     --text-color: #e7e7ee;
     --text-color-2: #e7e7ee;
     --accent-color-success: #ddee99;
+    --color-legend-minority: #008000;
+    --color-legend-majority: #0000FF;
 }
 
 body {
@@ -185,10 +187,55 @@ h2 {
     transform: translateY(2px);
 }
 
+.legend-container {
+    height: 100px;
+    width: 400px;
+    padding: 20px 40px;
+    background-color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 10px;
+}
+
+.legend-container > h3 {
+    margin: 0;
+}
+
+.legend-row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
+    gap: 5px;
+}
+
+.legend-color {
+    width: 200px;
+    text-align: center;
+    background-color: var(--text-color);
+    border: var(--background-color-2) 1px solid;
+}
+
+.legend-color.minority {
+    background-color: var(--color-legend-minority);
+}
+
+.legend-color.majority {
+    background-color: var(--color-legend-majority);
+}
+
+.legend-name {
+    width: 100%;
+    text-align: center;
+}
+
 .output-wrapper {
     display: flex;
     flex-direction: row;
     width: 100%;
+    row-gap: 3ch;
     column-gap: 3ch;
     margin-bottom: 2rem;
 }
@@ -213,6 +260,7 @@ h2 {
 }
 
 .output-wrapper > .table-output > div {
+    min-height: 50px;
     height: 100%;
     width: calc(100% - 2em);
     padding: 0 1em;
