--- a/main.css
+++ b/main.css
@@ -231,6 +231,35 @@ h2 {
     text-align: center;
 }
 
+.table-output {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.table-output-row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: stretch;
+    text-align: center;
+}
+
+.table-output-row.heading > div {
+    font-weight: bold;
+    background-color: var(--background-color);
+}
+
+.table-output-row > div {
+    padding: 1.5ch;
+    width: 100%;
+    vertical-align: center;
+    border: 1px var(--background-color) solid;
+}
+
 .output-wrapper {
     display: flex;
     flex-direction: row;
